--- a/RenameUtility/RenameUtility.csproj
+++ b/RenameUtility/RenameUtility.csproj
@@ -70,6 +70,12 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTagsSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTagsSettings.Designer.cs">
+      <DependentUpon>FormTagsSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Methods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -84,6 +90,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTagsSettings.resx">
+      <DependentUpon>FormTagsSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
