--- a/RenameUtility/RenameUtility.csproj
+++ b/RenameUtility/RenameUtility.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>RenameIcon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,12 +61,6 @@
     <Compile Include="FormChanges.Designer.cs">
       <DependentUpon>FormChanges.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormSave.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormSave.Designer.cs">
-      <DependentUpon>FormSave.cs</DependentUpon>
-    </Compile>
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,9 +81,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormChanges.resx">
       <DependentUpon>FormChanges.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormSave.resx">
-      <DependentUpon>FormSave.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
@@ -115,6 +109,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="RenameIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
